cabal-version: 1.12

name:           euler
version:        0.1.0.0
author:         Wilson Nguyen
build-type:     Simple

library
  exposed-modules:
      NumberTheory, Utils
  hs-source-dirs:
      common
  build-depends:
      base >=4.7 && <5,
      data-ordlist
  default-language: Haskell2010
  default-extensions: BangPatterns

executable 001
  main-is: 001.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5,
      euler
  default-language: Haskell2010
  default-extensions: BangPatterns

executable 002
  main-is: 002.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5,
      euler
  default-language: Haskell2010

executable 003
  main-is: 003.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 004
  main-is: 004.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 005
  main-is: 005.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 006
  main-is: 006.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 007
  main-is: 007.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 008
  main-is: 008.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 009
  main-is: 009.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 010
  main-is: 010.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 011
  main-is: 011.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 012
  main-is: 012.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 013
  main-is: 013.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 014
  main-is: 014.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 015
  main-is: 015.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 016
  main-is: 016.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 017
  main-is: 017.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 018
  main-is: 018.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 019
  main-is: 019.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 020
  main-is: 020.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010

executable 021
  main-is: 021.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      containers,
      euler
  default-language: Haskell2010

executable 022
  main-is: 022.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      split,
      euler
  default-language: Haskell2010

executable 023
  main-is: 023.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      containers,
      euler
  default-language: Haskell2010
  
executable 024
  main-is: 024.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010
  
executable 025
  main-is: 025.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010
  
executable 026
  main-is: 026.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      euler
  default-language: Haskell2010
  
executable 027
  main-is: 027.hs
  hs-source-dirs:
      execs
  ghc-options:
      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O2
  build-depends:
      base >=4.7 && <5, 
      containers,
      euler
  default-language: Haskell2010
  default-extensions: BangPatterns
